--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -1,12 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.deegree</groupId>
 	<artifactId>deegree-securityproxy-webservice</artifactId>
 	<packaging>war</packaging>
-	<version>0.0.1-SNAPSHOT</version>
 	<name>Deegree security webservice component</name>
-	<url>https://github.com/lat-lon/deegree-securityproxy</url>
+
+  <parent>
+    <groupId>org.deegree</groupId>
+    <artifactId>deegree-securityproxy</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  </parent>
 	
 	<dependencies>
 		<dependency>
@@ -32,58 +35,4 @@
 		<finalName>deegree-securityproxy-webservice</finalName>
 	</build>
 	
-	<properties>
-		<server.url>http://localhost:8080</server.url>
-		<catalina.home></catalina.home>
-    <!-- Sonar config -->
-    <sonar.host.url>http://vento.lat-lon:9000</sonar.host.url>
-    <sonar.jdbc.url>jdbc:postgresql://habub/sonar</sonar.jdbc.url>
-	</properties>
-  
-  <scm>
-    <connection>scm:git:git@github.com:lat-lon/deegree-securityproxy.git</connection>
-    <developerConnection>scm:git:git@github.com:lat-lon/deegree-securityproxy.git</developerConnection>
-    <url>https://github.com/lat-lon/deegree-securityproxy.git</url>
-  </scm>
-
-  <repositories>
-    <repository>
-      <id>latlon-repo</id>
-      <url>http://repo.lat-lon/nexus/content/groups/public/</url>
-    </repository>
-    <repository>
-      <id>j2ep-releases</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/j2ep-release/</url>
-    </repository>
-    <repository>
-      <id>j2ep-snapshots</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/j2ep-snapshots/</url>
-    </repository>
-    <repository>
-      <id>secproxy-releases</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy/</url>
-    </repository>
-    <repository>
-      <id>secproxy-snapshots</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy-snapshots/</url>
-    </repository>
-  </repositories>
-
-  <distributionManagement>
-    <repository>
-      <id>secproxy-releases</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy/</url>
-    </repository>
-    <snapshotRepository>
-      <id>secproxy-snapshots</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy-snapshots/</url>
-    </snapshotRepository>
-  </distributionManagement>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>latlon-repo</id>
-      <url>http://repo.lat-lon/nexus/content/groups/public/</url>
-    </pluginRepository>
-  </pluginRepositories>
 </project>
