--- a/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,20 @@
   <description>
   	Deegree Security Web Application
   </description>
+  
+    <filter>
+        <filter-name>LoggingFilter</filter-name>
+        <filter-class>org.deegree.securityproxy.filter.LoggingFilter</filter-class>
+        <init-param>
+          <param-name>proxyConfigEnv</param-name>
+          <param-value>PROXY_CONFIG</param-value>
+        </init-param>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>LoggingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 
     <filter>
         <filter-name>Proxy</filter-name>
@@ -23,5 +37,6 @@
         <filter-name>Proxy</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
 
 </web-app>
