--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,21 @@
         <artifactId>log4j</artifactId>
         <version>1.2.17</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>3.2.3.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>3.2.3.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>3.2.3.RELEASE</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
