--- a/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,7 @@
   
     <filter>
         <filter-name>LoggingFilter</filter-name>
-        <filter-class>org.deegree.securityproxy.filter.LoggingFilter</filter-class>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
         <init-param>
           <param-name>proxyConfigEnv</param-name>
           <param-value>PROXY_CONFIG</param-value>
