--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.deegree</groupId>
   <artifactId>deegree-securityproxy</artifactId>
   <packaging>pom</packaging>
-  <version>0.0.1-loggingfacade-SNAPSHOT</version>
+  <version>0.0.1-SNAPSHOT</version>
   <name>Deegree security component</name>
   <url>https://github.com/lat-lon/deegree-securityproxy</url>
 
