--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
       <dependency>
         <groupId>de.latlon</groupId>
         <artifactId>j2ep</artifactId>
-        <version>1.0-securityproxy-master</version>
+        <version>1.1-securityproxy-master-SNAPSHOT</version>
       </dependency>
       <dependency>
         <groupId>javax.servlet</groupId>
