Created tests and interfaces and implementation stubs for AuthenticationManager, RequestAuthenticationAnalyzer and HeaderAuthenticationToken and added Spring Security dependency

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <maven.compiler.source>1.6</maven.compiler.source>
     <maven.compiler.target>1.6</maven.compiler.target>
     <spring.version>3.2.3.RELEASE</spring.version>
+    <spring.security.version>3.1.4.RELEASE</spring.security.version>
   </properties>
 
   <dependencyManagement>
@@ -62,6 +63,21 @@
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring.security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-web</artifactId>
+        <version>${spring.security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-config</artifactId>
+        <version>${spring.security.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
