--- a/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <web-app xmlns="http://java.sun.com/xml/ns/j2ee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
   version="2.4">
@@ -11,7 +10,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:*Context.xml</param-value>
+    <param-value>classpath*:applicationContext.xml</param-value>
   </context-param>
 
   <listener>
