--- a/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
+++ b/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
@@ -1,2 +1,7 @@
 exception_file_path=UNDEFINED
 status_code=403
+
+jdbc.driver=org.postgresql.Driver
+jdbc.url=jdbc:postgresql://localhost:5432/ows_access_control
+jdbc.username=postgres
+jdbc.password=postgres
