--- a/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
@@ -19,12 +19,12 @@
   </listener>
 
   <filter>
-    <filter-name>loggingFilter</filter-name>
+    <filter-name>securityFilter</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
   </filter>
 
   <filter-mapping>
-    <filter-name>loggingFilter</filter-name>
+    <filter-name>securityFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
