--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
         <artifactId>joda-time</artifactId>
         <version>2.3</version>
       </dependency>
+      <dependency>
+        <groupId>org.geotools</groupId>
+        <artifactId>gt-geotiff</artifactId>
+        <version>8.3</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
