--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -97,6 +97,10 @@
       <groupId>org.geotools</groupId>
       <artifactId>gt-geotiff</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.geotools</groupId>
+      <artifactId>gt-epsg-hsql</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
