--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
     <spring.version>3.2.3.RELEASE</spring.version>
     <spring.security.version>3.1.4.RELEASE</spring.security.version>
     <j2ep.version>1.0.1-securityproxy-master</j2ep.version>
+    <geotools.version>9.5</geotools.version>
   </properties>
 
   <dependencyManagement>
@@ -127,6 +128,12 @@
         <artifactId>jts</artifactId>
         <version>1.13</version>
       </dependency>
+      <!-- geotools -->
+      <dependency>
+        <groupId>org.geotools</groupId>
+        <artifactId>gt-geotiff</artifactId>
+        <version>${geotools.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -156,6 +163,10 @@
     <repository>
       <id>secproxy-snapshots</id>
       <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy-snapshots/</url>
+    </repository>
+    <repository>
+      <id>opengeo</id>
+      <url>http://repo.opengeo.org/</url>
     </repository>
   </repositories>
 
