--- a/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
+++ b/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
@@ -7,3 +7,6 @@ jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/ows_access_control
 jdbc.username=postgres
 jdbc.password=postgres
+
+clipping_exception_file_path=UNDEFINED
+clipping_failed_status_code=500
