--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.deegree</groupId>
     <artifactId>deegree-securityproxy</artifactId>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.4.2-responseFilter-146</version>
   </parent>
 
   <dependencies>
