--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.deegree</groupId>
     <artifactId>deegree-securityproxy</artifactId>
-    <version>0.7-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
 
   <dependencies>
