added empty modules as preparation for splitting the core module (deegree-securityproxy-webservice)

--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,9 @@
   </pluginRepositories>
 
   <modules>
+    <module>deegree-securityproxy-authentication</module>
+    <module>deegree-securityproxy-packaging</module>
+    <module>deegree-securityproxy-service-wcs</module>
     <module>deegree-securityproxy-webservice</module>
   </modules>
 
