--- a/deegree-securityproxy-core/pom.xml
+++ b/deegree-securityproxy-core/pom.xml
@@ -18,6 +18,11 @@
       <artifactId>deegree-securityproxy-authentication</artifactId>
       <version>1.1-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-service-wcs</artifactId>
+      <version>1.1-SNAPSHOT</version>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
