--- a/deegree-securityproxy-core/pom.xml
+++ b/deegree-securityproxy-core/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>deegree-securityproxy-core</artifactId>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
   <name>deegree security core component</name>
 
   <parent>
