--- a/deegree-securityproxy-packaging/pom.xml
+++ b/deegree-securityproxy-packaging/pom.xml
@@ -13,16 +13,10 @@
   </parent>
 
   <dependencies>
-    <!-- Improve this! -->
-    <dependency>
-      <groupId>org.deegree</groupId>
-      <artifactId>deegree-securityproxy-core</artifactId>
-      <version>1.1-SNAPSHOT</version>
-    </dependency>
+    <!-- deegree-securityproxy -->
     <dependency>
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-service-wcs</artifactId>
-      <version>1.1-SNAPSHOT</version>
     </dependency>
     <!-- Test -->
     <dependency>
