changed name of the resulting war file

--- a/deegree-securityproxy-packaging/pom.xml
+++ b/deegree-securityproxy-packaging/pom.xml
@@ -40,4 +40,8 @@
     </dependency>
   </dependencies>
 
+  <build>
+    <finalName>deegree-securityproxy-webservice</finalName>
+  </build>
+
 </project>
