--- a/deegree-securityproxy-packaging/src/test/resources/org/deegree/securityproxy/test_config.properties
+++ b/deegree-securityproxy-packaging/src/test/resources/org/deegree/securityproxy/test_config.properties
@@ -12,3 +12,4 @@ clipping_exception_file_path=UNDEFINED
 clipping_failed_status_code=500
 
 access_token_header_field_name=access_token
+additional_request_parameters=contract_id
