--- a/deegree-securityproxy-packaging/pom.xml
+++ b/deegree-securityproxy-packaging/pom.xml
@@ -16,6 +16,10 @@
     <!-- deegree-securityproxy -->
     <dependency>
       <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-authentication-ows</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-service-wcs</artifactId>
     </dependency>
     <!-- Test -->
