--- a/deegree-securityproxy-service-wcs/pom.xml
+++ b/deegree-securityproxy-service-wcs/pom.xml
@@ -18,6 +18,11 @@
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-authentication</artifactId>
     </dependency>
+    <!-- TODO: remove this dependency! currently required because of WcsOperationType and WcsServiceVersion -->
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-authentication-ows</artifactId>
+    </dependency>
     <dependency>
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-core</artifactId>
