made OwsRequest abstract and added common fields

--- a/deegree-securityproxy-authentication-ows/pom.xml
+++ b/deegree-securityproxy-authentication-ows/pom.xml
@@ -16,6 +16,10 @@
     <!-- deegree-securityproxy -->
     <dependency>
       <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-authentication</artifactId>
     </dependency>
     <!-- Test -->
