Renamed deegree-securityproxy-packaging module to deegree-securityproxy-webservice

--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -2,9 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <artifactId>deegree-securityproxy-packaging</artifactId>
+  <artifactId>deegree-securityproxy-webservice</artifactId>
   <packaging>war</packaging>
-  <name>deegree security packaging component</name>
+  <name>deegree security proxy webservice component</name>
 
   <parent>
     <groupId>org.deegree</groupId>
