--- a/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
+++ b/deegree-securityproxy-webservice/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath*:applicationContext.xml,classpath*:authenticationContext.xml,classpath*:wmsContext.xml</param-value>
+    <param-value>classpath*:applicationContext.xml,classpath*:authenticationContext.xml,classpath*:wmsContext.xml,classpath*:wcsContext.xml</param-value>
   </context-param>
 
   <listener>
