--- a/deegree-securityproxy-core/pom.xml
+++ b/deegree-securityproxy-core/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.deegree</groupId>
     <artifactId>deegree-securityproxy</artifactId>
-    <version>1.1</version>
+    <version>1.2-SNAPSHOT</version>
   </parent>
 
   <dependencies>
