--- a/deegree-securityproxy-service-wcs/pom.xml
+++ b/deegree-securityproxy-service-wcs/pom.xml
@@ -34,6 +34,10 @@
       <groupId>org.mockito</groupId>
       <artifactId>mockito-core</artifactId>
     </dependency>
+      <dependency>
+        <groupId>org.xmlmatchers</groupId>
+        <artifactId>xml-matchers</artifactId>
+      </dependency>
     <!-- JDBC -->
     <dependency>
       <groupId>postgresql</groupId>
