--- a/deegree-securityproxy-service-commons/pom.xml
+++ b/deegree-securityproxy-service-commons/pom.xml
@@ -18,6 +18,10 @@
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-authentication-ows</artifactId>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
