Created matcher module for image matching and integrated it into deegree-securityproxy-service-wcs and deegree-securityproxy-service-wms

--- a/deegree-securityproxy-service-wms/pom.xml
+++ b/deegree-securityproxy-service-wms/pom.xml
@@ -42,6 +42,10 @@
       <groupId>org.xmlmatchers</groupId>
       <artifactId>xml-matchers</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-matcher</artifactId>
+    </dependency>
     <!-- JDBC -->
     <dependency>
       <groupId>postgresql</groupId>
