throw ows exception if parameter service is missing or invalid

--- a/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
+++ b/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
@@ -23,3 +23,6 @@ wcs_clipping_failed_status_code=500
 
 access_token_header_field_name=access_token
 additional_request_parameters=contract_id
+
+common-exception-file-path=UNDEFINED
+common-exception-status-code=400
