--- a/deegree-securityproxy-service-wcs/pom.xml
+++ b/deegree-securityproxy-service-wcs/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>deegree-securityproxy-service-wcs</artifactId>
   <packaging>jar</packaging>
@@ -24,6 +25,11 @@
     <dependency>
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-authentication-ows</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-core</artifactId>
+      <type>test-jar</type>
     </dependency>
     <!-- Test -->
     <dependency>
