Added wfs module to default webapp

--- a/deegree-securityproxy-webservice/pom.xml
+++ b/deegree-securityproxy-webservice/pom.xml
@@ -29,6 +29,11 @@
       <groupId>org.deegree</groupId>
       <artifactId>deegree-securityproxy-service-wps</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.deegree</groupId>
+      <artifactId>deegree-securityproxy-service-wfs</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <!-- Test -->
     <dependency>
       <groupId>junit</groupId>
