--- a/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
+++ b/deegree-securityproxy-webservice/src/test/resources/org/deegree/securityproxy/test_config.properties
@@ -19,6 +19,9 @@ wps_authorization_denied_status_code=403
 wps_dcp_url_get=http://localhost:8080/get
 wps_dcp_url_post=http://localhost:8080/post
 
+wfs_dcp_url_get=http://localhost:8080/get
+wfs_dcp_url_post=http://localhost:8080/post
+
 jdbc.driver=org.postgresql.Driver
 jdbc.url=jdbc:postgresql://localhost:5432/ows_access_control
 jdbc.username=postgres
