--- a/deegree-securityproxy-service-wms/pom.xml
+++ b/deegree-securityproxy-service-wms/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>deegree-securityproxy-service-wms</artifactId>
-  <packaging>jar</packaging>
   <name>deegree security wms component</name>
 
   <parent>
@@ -45,7 +44,7 @@
     </dependency>
     <!-- JDBC -->
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- Logging -->
@@ -115,7 +114,6 @@
     <dependency>
       <groupId>org.geotools</groupId>
       <artifactId>gt-render</artifactId>
-      <version>9.5</version>
     </dependency>
   </dependencies>
 
