--- a/deegree-securityproxy-service-wcs/pom.xml
+++ b/deegree-securityproxy-service-wcs/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>deegree-securityproxy-service-wcs</artifactId>
-  <packaging>jar</packaging>
   <name>deegree security wcs component</name>
 
   <parent>
@@ -49,7 +48,7 @@
     </dependency>
     <!-- JDBC -->
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- Logging -->
@@ -122,7 +121,6 @@
     <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <scope>compile</scope>
     </dependency>
     <!-- Servlet API -->
     <dependency>
