--- a/deegree-securityproxy-service-wps/pom.xml
+++ b/deegree-securityproxy-service-wps/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <artifactId>deegree-securityproxy-service-wps</artifactId>
-  <packaging>jar</packaging>
   <name>deegree security wps component</name>
 
   <parent>
@@ -45,7 +44,7 @@
     </dependency>
     <!-- JDBC -->
     <dependency>
-      <groupId>postgresql</groupId>
+      <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
     </dependency>
     <!-- Logging -->
