--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,7 @@
   <packaging>pom</packaging>
   <version>1.7-SNAPSHOT</version>
   <name>deegree security proxy</name>
-  <description>deegree security proxy (DSP) is lightweight security framework for protecting OGC Web Services
-  </description>
+  <description>deegree security proxy (DSP) is lightweight security framework for protecting OGC Web Services</description>
   <url>https://github.com/lat-lon/deegree-securityproxy</url>
   <inceptionYear>2013</inceptionYear>
   <licenses>
@@ -18,17 +17,17 @@
     </license>
   </licenses>
   <organization>
-    <name>deegree</name>
-    <url>http://www.deegree.org</url>
+    <name>lat-lon</name>
+    <url>http://www.lat-lon.de</url>
   </organization>
 
   <properties>
-    <maven.compiler.source>1.6</maven.compiler.source>
-    <maven.compiler.target>1.6</maven.compiler.target>
-    <spring.version>3.2.3.RELEASE</spring.version>
-    <spring.security.version>3.1.4.RELEASE</spring.security.version>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+    <spring.version>3.2.18.RELEASE</spring.version>
+    <spring.security.version>3.2.10.RELEASE</spring.security.version>
     <j2ep.version>1.2-securityproxy-master</j2ep.version>
-    <geotools.version>9.5</geotools.version>
+    <geotools.version>10.8</geotools.version>
   </properties>
 
   <build>
@@ -37,7 +36,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
-          <version>2.5</version>
+          <version>2.6</version>
           <executions>
             <execution>
               <goals>
@@ -49,7 +48,63 @@
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
-         <version>2.9.1</version>
+         <version>2.10.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-site-plugin</artifactId>
+          <version>3.7.1</version>
+          <configuration>
+            <locales>en</locales>
+            <inputEncoding>UTF-8</inputEncoding>
+            <outputEncoding>UTF-8</outputEncoding>
+          </configuration>
+          <executions>
+            <!-- used for multiproject builds
+            mvn site:stage -DstagingDirectory=./target/fullsite
+            -->
+            <execution>
+              <id>attach-descriptor</id>
+              <goals>
+                <goal>attach-descriptor</goal>
+              </goals>
+            </execution>
+          </executions>
+          <dependencies>
+            <!-- To use the Markdown format -->
+            <dependency>
+              <groupId>org.apache.maven.doxia</groupId>
+              <artifactId>doxia-module-markdown</artifactId>
+              <version>1.7</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <plugin>
+          <!--
+            To generate the report run:
+            mvn dependency-check:check
+            -->
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>3.3.4</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+              <phase>verify</phase>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <!--
+            To generate the report run:
+            mvn versions:dependency-updates-report
+            mvn versions:display-dependency-updates
+            -->
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>versions-maven-plugin</artifactId>
+          <version>2.6</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -110,7 +165,7 @@
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
-        <version>4.11</version>
+        <version>4.12</version>
         <scope>test</scope>
       </dependency>
       <dependency>
@@ -128,7 +183,7 @@
       <dependency>
         <groupId>hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
-        <version>1.8.0.7</version>
+        <version>1.8.0.10</version>
       </dependency>
       <!-- J2EP -->
       <dependency>
@@ -145,9 +200,9 @@
       </dependency>
       <!-- JDBC -->
       <dependency>
-        <groupId>postgresql</groupId>
+        <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>9.1-901.jdbc4</version>
+        <version>42.2.5</version>
       </dependency>
       <!-- Logging -->
       <dependency>
@@ -168,8 +223,14 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
         <version>${spring.version}</version>
+        <scope>test</scope>
       </dependency>
       <!-- Spring Security -->
       <dependency>
@@ -196,12 +257,12 @@
       <dependency>
         <groupId>commons-io</groupId>
         <artifactId>commons-io</artifactId>
-        <version>2.4</version>
+        <version>2.6</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
-        <version>3.2.1</version>
+        <version>3.2.2</version>
       </dependency>
       <dependency>
         <groupId>commons-lang</groupId>
@@ -209,15 +270,30 @@
         <version>2.6</version>
       </dependency>
       <dependency>
+        <groupId>commons-beanutils</groupId>
+        <artifactId>commons-beanutils</artifactId>
+        <version>1.9.3</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-codec</groupId>
+        <artifactId>commons-codec</artifactId>
+        <version>1.11</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.1.3</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
-        <version>4.3.3</version>
+        <version>4.3.6</version>
       </dependency>
       <!-- Joda Time -->
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.3</version>
+        <version>2.5</version>
       </dependency>
       <!-- JTS -->
       <dependency>
@@ -252,28 +328,13 @@
 
   <repositories>
     <repository>
-      <id>latlon-repo</id>
-      <url>http://repo.lat-lon/nexus/content/groups/public/</url>
-    </repository>
-    <repository>
-      <id>j2ep-releases</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/j2ep-release/</url>
-    </repository>
-    <repository>
-      <id>j2ep-snapshots</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/j2ep-snapshots/</url>
-    </repository>
-    <repository>
-      <id>secproxy-releases</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy/</url>
-    </repository>
-    <repository>
-      <id>secproxy-snapshots</id>
-      <url>http://repo.lat-lon/nexus/content/repositories/deegree-securityproxy-snapshots/</url>
-    </repository>
-    <repository>
       <id>opengeo</id>
       <url>http://repo.opengeo.org/</url>
+    </repository>
+    <repository>
+      <id>osgeo</id>
+      <name>Open Source Geospatial Foundation Repository</name>
+      <url>http://download.osgeo.org/webdav/geotools/</url>
     </repository>
   </repositories>
 
@@ -288,13 +349,6 @@
     </snapshotRepository>
   </distributionManagement>
 
-  <pluginRepositories>
-    <pluginRepository>
-      <id>latlon-repo</id>
-      <url>http://repo.lat-lon/nexus/content/groups/public/</url>
-    </pluginRepository>
-  </pluginRepositories>
-
   <modules>
     <module>deegree-securityproxy-authentication</module>
     <module>deegree-securityproxy-authentication-ows</module>
@@ -308,15 +362,5 @@
     <module>deegree-securityproxy-service-wps</module>
     <module>deegree-matcher</module>
   </modules>
-
-  <mailingLists>
-    <mailingList>
-      <name>deegree users mailing list</name>
-      <subscribe>https://lists.sourceforge.net/lists/listinfo/deegree-users</subscribe>
-      <unsubscribe>https://lists.sourceforge.net/lists/listinfo/deegree-users</unsubscribe>
-      <post>deegree-users@lists.sourceforge.net</post>
-      <archive>http://sourceforge.net/mailarchive/forum.php?forum_name=deegree-users</archive>
-    </mailingList>
-  </mailingLists>
 
 </project>
